--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -1,8 +1,16 @@
 development:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  yandex_auth_app_id: <%= ENV["YA_AUTH_APP_ID"] %>
+  yandex_auth_secret: <%= ENV["YA_AUTH_SECRET"] %>
+  github_auth_app_id: <%= ENV["GITHUB_AUTH_APP_ID"] %>
+  github_auth_secret: <%= ENV["GITHUB_AUTH_SECRET"] %>
 
 test:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
 
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  yandex_auth_app_id: <%= ENV["YA_AUTH_APP_ID"] %>
+  yandex_auth_secret: <%= ENV["YA_AUTH_SECRET"] %>
+  github_auth_app_id: <%= ENV["GITHUB_AUTH_APP_ID"] %>
+  github_auth_secret: <%= ENV["GITHUB_AUTH_SECRET"] %>
