--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "chartkick": "^3.2.0",
     "interact": "^0.0.3",
     "jquery": "^3.5.0",
+    "mustache": "^4.0.1",
     "jquery-ui": "^1.12.1",
     "popper.js": "^1.16.0",
     "turbolinks": "^5.2.0"
