--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "chart.js": "^2.9.3",
     "chartkick": "^3.2.1",
     "firebase": "^7.21.0",
-    "firebaseui": "^4.6.1",
+    "firebaseui-ru": "^4.6.1",
     "interact": "^0.0.3",
     "jquery": "^3.5.0",
     "jquery-ui": "^1.12.1",
